--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -1,7 +1,36 @@
+.headerBox {
+  width: 100%;
+  background-color: #97C6D4;
+  height: 100px;
+  position: relative;
+  z-index: -1;
+}
+
+.settingBtn {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.settingBtn > img {
+  width: 30px;
+}
+
+.input-wrapper {
+  background-color: #FFF;
+  height: 60px;
+}
+
 #pac-input {
   height: 50px;
-  width: 80%;
-  text-align: left;;
+  width: 90%;
+  text-align: left;
+  margin-top: 5px;
+  padding-right: 50px;
+  background: url(image/zoom.png) no-repeat scroll 3px 50%;
+  background-color: #D4E1E4;
+  background-size: 20px;
+  padding-left:30px;
 }
 
 #pac-input:focus {
@@ -9,7 +38,17 @@
 }
 
 .pac-container .pac-item {
-  background-color: #F0F8FF;
+  background-color: #D4E1E4;
+}
+
+input[type=text]{
+  border-radius:30px;
+  background-color: #D4E1E4;
+}
+
+#microphone {
+  width: 50px;
+  height: 45px;
 }
 
 #map {
@@ -20,18 +59,12 @@
 }
 
 #bottomBar {
-  background-color:gray;
+  background-color: #E7EFF1;
 }
 
 /*Sidebar start*/
 body {
   font-family: "Lato", sans-serif;
-}
-
-.headerBox {
-  width: 100%;
-  background-color: #00CED1;
-  height: 100px;
 }
 
 .sidenav {
@@ -41,10 +74,10 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #F0F8FF;
+  background-color: #FFF;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 00px;
   text-align:left;
 }
 
@@ -54,7 +87,8 @@ body {
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s
+    transition: 0.3s;
+    border-top: 1px solid #D2E0E4;
 
 }
 
@@ -68,7 +102,7 @@ body {
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-    background-color: #00CED1;
+    z-index: -1;
 }
 
 @media screen and (max-height: 450px) {
@@ -89,5 +123,39 @@ body {
   height: auto;
   min-height: 100%;
   border-radius: 0;
+  background-color: #97C6D4;
 }
+
+.modal-title {
+  text-align: center;
+  font-weight: bold;
+}
+
+.modal-body {
+  height: 500px;
+}
+
 /*Modal end*/
+
+#gasModal {
+  background-color: #97C6D4;
+}
+
+#gasMap {
+  height: 100%;
+}
+
+/*bottom*/
+#bottomDestContainer {
+    height: 0px;
+    width:100%;
+    position:absolute;
+}
+
+#bottomDest {
+    position:absolute;
+    bottom:0px;
+    width:100%;
+    height:50px;
+    border: 1px solid red;
+}
