--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -52,7 +52,7 @@ input[type=text]{
 }
 
 #map {
-  height: 600px;
+  height: 630px;
   width: 100%;
   transition: 0.5s;
   float: right;
@@ -65,6 +65,7 @@ input[type=text]{
 /*Sidebar start*/
 body {
   font-family: "Lato", sans-serif;
+  height: 100%;
 }
 
 .sidenav {
@@ -161,15 +162,142 @@ body {
 
 /*bottom*/
 #bottomDestContainer {
-    height: 0px;
-    width:100%;
-    position:absolute;
+  height: 0px;
+  width:100%;
+  position:absolute;
 }
 
 #bottomDest {
-    position:absolute;
-    bottom:0px;
-    width:100%;
-    height:50px;
-    border: 1px solid red;
+  position:absolute;
+  bottom:0px;
+  width:100%;
+  height:50px;
+  border: 1px solid red;
+}
+
+/*Place details*/
+#backBtnWrapper {
+  position: absolute;
+  top: 40px;
+  left: 35px;
+  z-index: 999;
+}
+
+#backBtn {
+  opacity: 0.3;
+  width: 20px;
+}
+
+#favoriteAddBtn > a:hover {
+  text-decoration: none;
+}
+
+.favoriteAdd {
+  text-align: left;
+}
+
+.favCancel {
+  padding-top: 20px;
+  font-size: 25px;
+}
+
+#favoriteAddBtn {
+  text-align: left;
+  color: #78CFE8;
+  font-size: 30px;
+}
+
+#favoriteAddBtn:before {
+  /*content: ' \2605';*/
+  /*color: #fff;*/
+}
+
+.cancelBtnWrapper {
+  text-align: right;
+}
+
+.calcelBtn {
+  width: 20px;
+  opacity: 0.3;
+}
+
+.placeIconWrapper {
+  padding-top: 10px;
+  text-align: center;
+}
+
+.autocompletePlaceIcon {
+  /*width: 60px;*/
+  -moz-box-shadow: 0px 6px 5px #ccc;
+  -webkit-box-shadow: 0px 6px 5px #ccc;
+  box-shadow: 0px 6px 5px #ccc;
+  -moz-border-radius:190px;
+  -webkit-border-radius:190px;
+  border-radius:190px;
+}
+
+#autocompletePlaceName {
+  padding-top: 20px;
+  color: #585858;
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#autocompletePlaceCity {
+  text-align: center;
+  font-size: 25px;
+  color: #828282;
+}
+
+#autocompletePlaceDistance {
+  text-align: center;
+  font-size: 25px;
+  color: #858585;
+  padding-bottom: 50px;
+}
+
+.autocompletePlaceLine {
+  width: 100%;
+  border-bottom: 2px solid #DCE7E9;
+}
+
+.autocompletePlacePhoneNumber {
+  margin: 20px auto;
+  text-align: center;
+}
+
+.autocompletePlacePhoneNumber {
+  color: #2AC7FF;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+.afterPhoneNumberLine {
+  text-align: center;
+  width: 100%;
+  border-bottom: 2px solid #DCE7E9;
+}
+
+.reserveDepart {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#favoriteAskModal {
+  width: 60%;
+  height: 190px;
+  margin: auto auto;
+}
+
+#favoriteAskModal > div > div {
+  background-color: #FFF;
+}
+
+#favoriteAskModal .modal-body {
+  height: 50px;
+}
+
+#favoriteName {
+  width: 100%;
 }
