added favorite star btn

--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -47,7 +47,7 @@ input[type=text]{
 }
 
 #microphone {
-  width: 50px;
+  width: auto;
   height: 45px;
 }
 
@@ -188,6 +188,10 @@ body {
   width: 20px;
 }
 
+#favoriteAddBtn > a {
+  color: #8ED7EB;
+}
+
 #favoriteAddBtn > a:hover {
   text-decoration: none;
 }
@@ -300,4 +304,22 @@ body {
 
 #favoriteName {
   width: 100%;
+}
+
+#favoriteListContents {
+  background-color: #FFF;
+}
+
+#favoriteListContents a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  border-top: 1px solid #D2E0E4;
+}
+
+#favoriteListContents a:hover{
+    color: #f1f1f1;
 }
