--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -382,21 +382,30 @@ body {
   font-size: 25px;
   text-align: left;
   padding-left: 30px;
+  padding-top: 30px;
 }
 
 #addWaypoints {
   height: 20%;
   border-bottom: 1px solid #DBDFE0;
+  padding-top: 30px;
+}
+
+#addWaypoints img {
+  height: 60%;
+  opacity: 0.3;
 }
 
 .middleFunctions {
   height: 50%;
-  border-left: 1px solid #DBDFE0;
+  width: 100%;
+  padding-top: 30px;
   border-bottom: 1px solid #DBDFE0;
 }
 
 .bottomBottons {
   height: 30%;
+  padding-top: 30px;
 }
 
 .bottomBottons > div, .bottomBottons > div > button {
