--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -1,3 +1,35 @@
+#header {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  background-color: #96C5D3;
+  z-index: 9999;
+}
+
+#header div {
+  bottom: 5px;
+}
+
+#header-back {
+  margin-top: 15px;
+  padding-right: 10px;
+  height: 30px;
+  border-right: 1px solid #FFF;
+}
+
+#header-title {
+  font-size: 40px;
+  color: #19596C;
+  text-align: center;
+}
+
+#header-close {
+  margin-top: 15px;
+  padding-left: 10px;
+  height: 30px;
+  border-left: 1px solid #FFF;
+}
+
 .headerBox {
   width: 100%;
   background-color: #97C6D4;
