--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -155,6 +155,36 @@ body {
   text-align:right;
 }
 
+.gasStationInfoBar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #96C5D3;
+  color: #3A3A3A;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  transition: 0.5s;
+  padding-top: 00px;
+  text-align: left;
+}
+
+.gasStation {
+  margin-top: 70px;
+  margin-left: 8%;
+  font-size: 35px;
+  background-color: #FFF;
+  display: inline=block;
+}
+
+.gasStation img {
+  width: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
