--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -308,6 +308,7 @@ html, body {
   font-size: 35px;
   font-weight: bold;
   text-align: center;
+  overflow-y: hidden;
 }
 
 #autocompletePlaceCity {
