--- a/google_maps_new/style.css
+++ b/google_maps_new/style.css
@@ -526,3 +526,32 @@ html, body {
   width: auto;
   height: 45px;
 }
+
+#waitDialog {
+  text-align: center;
+}
+
+#waitDialog img {
+  border-radius: 50%;
+  margin: 20%;
+}
+
+#waitCloseBtn {
+  display: none;
+}
+
+#loadingDialog {
+  text-align: center;
+}
+
+#loadingDialog img {
+  border-radius: 30%;
+  margin: 20%;
+  opacity: 0.4;
+  width: 200px;
+  height: 200px;
+}
+
+#loadingCloseBtn {
+  display: none;
+}
