--- a/google_maps_new/css/style.css
+++ b/google_maps_new/css/style.css
@@ -63,7 +63,7 @@
   text-align: left;
   margin-top: 5px;
   padding-right: 50px;
-  background: url(image/zoom.png) no-repeat scroll 3px 50%;
+  background: url(../image/zoom.png) no-repeat scroll 3px 50%;
   background-color: #D4E1E4;
   background-size: 20px;
   padding-left:30px;
