added voice recognition

--- a/google_maps_new/css/style.css
+++ b/google_maps_new/css/style.css
@@ -317,6 +317,7 @@ html, body {
   text-align: center;
   font-size: 25px;
   color: #828282;
+  overflow-x: hidden;
 }
 
 #autocompletePlaceDistance {
